[metadata]
name = rp2-conv
version = 0.0.1
description = Convert CSV trade files from common Crypto exchanges to a normalized CSV / ODS file for use with eprbell/rp2 (https://github.com/eprbell/rp2) for tax reporting.
long_description_content_type = text/markdown
long_description = file: README.md, CHANGELOG.md
keywords = accounting, altcoin, bitcoin, BTC, capital gains, cost basis, crypto, cryptocurrency, ETH, ethereum, finance, form 8949, privacy, tax, coinbase, bitmart, kraken, binance, exchange, crypto exchanges, converter
license = MIT License
author = h3rb
url = https://github.com/h3rb/rp2-conv
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Utilities
project_urls =
    Source Code = https://github.com/h3rb/rp2-conv
    Contact = https://github.com/h3rb/rp2-conv/issues
    User Documentation = https://github.com/h3rb/rp2-conv/blob/main/README.md
    Developer Documentation = https://github.com/h3rb/rp2-conv/blob/main/README.dev.md

[options]
package_dir =
    = src
packages = find:
install_requires =
    jsonschema>=3.2.0
    pyexcel-ezodf>=0.3.4

[options.packages.find]
where=src
